Middleware now uses JWT; Routes protected with new Middleware; Hash refactor
